{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 19,
  "lineage": "284731af-3ec8-cc0c-3104-70148518d1a1",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:240362762481:network-acl/acl-019d29f979f5bb941",
            "default_network_acl_id": "acl-019d29f979f5bb941",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-019d29f979f5bb941",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "240362762481",
            "subnet_ids": [
              "subnet-01acb404412dfa269",
              "subnet-09fe1cdac02ecedd3"
            ],
            "tags": {
              "Name": "vpc-eks-staging-default"
            },
            "tags_all": {
              "Name": "vpc-eks-staging-default"
            },
            "vpc_id": "vpc-0f7ca6ec96259df66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:240362762481:route-table/rtb-0ec57e28a6f5b668d",
            "default_route_table_id": "rtb-0ec57e28a6f5b668d",
            "id": "rtb-0ec57e28a6f5b668d",
            "owner_id": "240362762481",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "vpc-eks-staging-default"
            },
            "tags_all": {
              "Name": "vpc-eks-staging-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f7ca6ec96259df66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:240362762481:security-group/sg-0165868013808bea5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0165868013808bea5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "240362762481",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-eks-staging-default"
            },
            "tags_all": {
              "Name": "vpc-eks-staging-default"
            },
            "vpc_id": "vpc-0f7ca6ec96259df66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:240362762481:internet-gateway/igw-0e9517d20eba11738",
            "id": "igw-0e9517d20eba11738",
            "owner_id": "240362762481",
            "tags": {
              "Name": "vpc-eks-staging"
            },
            "tags_all": {
              "Name": "vpc-eks-staging"
            },
            "vpc_id": "vpc-0f7ca6ec96259df66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e9517d20eba11738",
            "id": "r-rtb-04445e60c8fbabdf21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04445e60c8fbabdf2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:240362762481:route-table/rtb-0cc03ca9c3814e924",
            "id": "rtb-0cc03ca9c3814e924",
            "owner_id": "240362762481",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-eks-staging-private-us-west-2a"
            },
            "tags_all": {
              "Name": "vpc-eks-staging-private-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7ca6ec96259df66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:240362762481:route-table/rtb-03d53f1a7d0e16bc3",
            "id": "rtb-03d53f1a7d0e16bc3",
            "owner_id": "240362762481",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-eks-staging-private-us-west-2b"
            },
            "tags_all": {
              "Name": "vpc-eks-staging-private-us-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7ca6ec96259df66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:240362762481:route-table/rtb-04445e60c8fbabdf2",
            "id": "rtb-04445e60c8fbabdf2",
            "owner_id": "240362762481",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-eks-staging-public"
            },
            "tags_all": {
              "Name": "vpc-eks-staging-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7ca6ec96259df66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffbbc7509645efd1",
            "route_table_id": "rtb-0cc03ca9c3814e924",
            "subnet_id": "subnet-07a78d5eb8a1aa172"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0362f5fef0ba095b7",
            "route_table_id": "rtb-03d53f1a7d0e16bc3",
            "subnet_id": "subnet-01acb404412dfa269"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f699577ca6472240",
            "route_table_id": "rtb-04445e60c8fbabdf2",
            "subnet_id": "subnet-09fe1cdac02ecedd3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3a10dde8e66a531",
            "route_table_id": "rtb-04445e60c8fbabdf2",
            "subnet_id": "subnet-01401e4495995a3dd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:240362762481:subnet/subnet-07a78d5eb8a1aa172",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a78d5eb8a1aa172",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "240362762481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-eks-staging-private-us-west-2a"
            },
            "tags_all": {
              "Name": "vpc-eks-staging-private-us-west-2a"
            },
            "vpc_id": "vpc-0f7ca6ec96259df66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:240362762481:subnet/subnet-01acb404412dfa269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01acb404412dfa269",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "240362762481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-eks-staging-private-us-west-2b"
            },
            "tags_all": {
              "Name": "vpc-eks-staging-private-us-west-2b"
            },
            "vpc_id": "vpc-0f7ca6ec96259df66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:240362762481:subnet/subnet-09fe1cdac02ecedd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fe1cdac02ecedd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "240362762481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-eks-staging-public-us-west-2a"
            },
            "tags_all": {
              "Name": "vpc-eks-staging-public-us-west-2a"
            },
            "vpc_id": "vpc-0f7ca6ec96259df66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:240362762481:subnet/subnet-01401e4495995a3dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01401e4495995a3dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "240362762481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-eks-staging-public-us-west-2b"
            },
            "tags_all": {
              "Name": "vpc-eks-staging-public-us-west-2b"
            },
            "vpc_id": "vpc-0f7ca6ec96259df66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:240362762481:vpc/vpc-0f7ca6ec96259df66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019d29f979f5bb941",
            "default_route_table_id": "rtb-0ec57e28a6f5b668d",
            "default_security_group_id": "sg-0165868013808bea5",
            "dhcp_options_id": "dopt-3db9e045",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f7ca6ec96259df66",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec57e28a6f5b668d",
            "owner_id": "240362762481",
            "tags": {
              "Name": "vpc-eks-staging"
            },
            "tags_all": {
              "Name": "vpc-eks-staging"
            }
          }
        }
      ]
    }
  ]
}